<resources>
    <string name="app_name" translatable="false">CanIDrive</string>
    <string name="action_settings">Settings</string>

    <string name="user_preferences" translatable="false">USER_PREFS</string>
    <string name="user_weight" translatable="false">WEIGHT</string>
    <string name="user_sex" translatable="false">SEX</string>
    <string name="user_young_driver" translatable="false">YOUNG_DRIVER</string>
    <string name="user_professional_driver" translatable="false">PROFESSIONAL_DRIVER</string>

    <string name="user_initialized" translatable="false">INITIALIZED</string>


    <string name="volume">Volume</string>
    <string name="degree">Degree</string>
    <string name="when">When</string>
    <string name="weight">Weight</string>
    <string name="sex">Sex</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="other">OTHER</string>
    <string name="about_you">About you</string>
    <string name="can_i_drive_question">Can I Drive ?</string>
    <string name="version" translatable="false">version</string>
    <string name="select_a_drink">Select a drink</string>
    <string name="now">now</string>
    <string name="car_colored_with_status" translatable="false">car colored with status</string>
    <string name="drive_status_symbol" translatable="false">drive status symbol</string>
    <string name="time_to_wait" translatable="false">time to wait</string>
    <string name="young_driver">Young driver</string>
    <string name="professional_driver">Professional driver</string>
    <string name="country">Country</string>
    <string name="countryCode" translatable="false">COUNTRY_CODE</string>
    <string name="alcohol_blood_rate" translatable="false">alcohol blood rate</string>
    <string name="dev_alcohol_rate_example_text" translatable="false">0.6 g/L</string>
    <string name="dev_time_example_text" translatable="false">12:34</string>

    <string name="less_two_years_driving">Less than 2 years of driving experience.</string>
    <string name="twenty_one_young_or_less_three_years_driving">Less than 21 years old, or less than 3 years of driving experience</string>
    <string name="sixteen_to_twenty_four_years_old">16–24 years old</string>
    <string name="twenty_one_young_or_less_two_years_driving">Less than 21 years old or less than 2 years driving.</string>
    <string name="motor_cycle_or_less_two_years_driving">Motor cycle or less than 2 years driving.</string>
    <string name="three_years_driving">Less than 3 years driving.</string>
    <string name="five_years_driving">Less than 5 years driving.</string>
    <string name="motor_cycle_or_young_drivers">Motor cycle or young driver.</string>
    <string name="twenty_one_young">Less than 21 years old.</string>
    <string name="new_driver_or_twenty_four">New drivers or less than 24 years old.</string>
    <string name="forbidden_symbol" translatable="false">forbidden symbol</string>
    <string name="drop_symbol" translatable="false">drop symbol</string>
    <string name="customCountryLimit" translatable="false">CUSTOM_COUNTRY_LIMIT</string>
    <string name="customCountryLabel">Other</string>
    <string name="day_unit">d</string>
    <string name="drink_history">Drinks history</string>
    <string name="drive_law">Driving law</string>
    <string name="body_data">Body data</string>
    <string name="drive_status">Drive Status</string>
    <string name="user_health">Health</string>
    <string name="alcohol_tolerance_low">low</string>
    <string name="alcohol_tolerance_medium">average</string>
    <string name="alcohol_tolerance_high">good</string>
    <string name="user_tolerance" translatable="false">USER_TOLERANCE</string>
    <string name="presets">Presets</string>
    <string name="add_preset_description">Define new drink</string>
    <string name="preset_name_title">Drink\'s name</string>
    <string name="preset_red_wine">Red wine</string>
    <string name="preset_light_beer">Light beer</string>
    <string name="preset_triple_beer">Triple beer</string>
    <string name="preset_soft_cider">Soft cider</string>
    <string name="preset_martini">Martini</string>
    <string name="preset_whisky">Whisky</string>
</resources>
