<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/fragment_drinker">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDriverStatusTitle"
        android:text="Driver status"
        style="@style/PillTitle"
        app:layout_constraintTop_toBottomOf="@+id/linearPickersDrinker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/textViewCountryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/country"
        app:layout_constraintTop_toBottomOf="@+id/textViewDriverStatusTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerCountry"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/textViewCountryTitle"
        app:layout_constraintStart_toEndOf="@+id/textViewCountryTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCountryTitle" />

    <CheckBox
        android:id="@+id/checkboxYoungDriver"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/young_driver"
        app:layout_constraintTop_toBottomOf="@id/textViewCountryTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imageDropCurrentLimit" />

    <CheckBox
        android:id="@+id/checkboxProfessionalDriver"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/professional_driver"
        app:layout_constraintTop_toBottomOf="@id/checkboxYoungDriver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imageDropCurrentLimit" />

    <LinearLayout
        android:id="@+id/linearLimitValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/textViewCountryTitle"
        app:layout_constraintEnd_toStartOf="@+id/textViewLimitUnit"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/textViewCurrentLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/driveRed"
            android:text="1.23"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/editTextCurrentLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:paddingBottom="5dp"
            android:paddingTop="0dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:textSize="22sp"
            android:textColor="@color/driveRed"
            android:text="1.23"
            tools:ignore="Autofill,HardcodedText,LabelFor"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewLimitUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/driveRed"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCountry"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="g/L" />

    <ImageView
        android:id="@+id/imageForbiddenCurrentLimit"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="3dp"
        android:src="@drawable/ic_forbidden_white_24dp"
        android:tint="@color/driveRed"
        app:layout_constraintEnd_toStartOf="@id/linearLimitValue"
        app:layout_constraintTop_toTopOf="@id/linearLimitValue"

        android:contentDescription="@string/forbidden_symbol" />

    <ImageView
        android:id="@+id/imageDropCurrentLimit"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:paddingEnd="-10dp"
        android:src="@drawable/ic_blood_drop_plain"
        app:layout_constraintEnd_toStartOf="@id/imageForbiddenCurrentLimit"
        app:layout_constraintTop_toTopOf="@id/linearLimitValue"
        android:contentDescription="@string/drop_symbol" />
</merge>