<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.DriveFragment">

    <LinearLayout
        android:id="@+id/linearDriveStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom|top"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageCar"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:contentDescription="@string/car_colored_with_status"
            android:paddingBottom="10dp"
            android:src="@drawable/ic_directions_car_white_24dp"
            android:tint="@color/driveGreen" />

        <ImageView
            android:id="@+id/imageDriveStatus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="-30dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="top|start"
            android:contentDescription="@string/drive_status_symbol"
            android:src="@drawable/ic_forbidden_white_24dp"
            android:tint="@color/driveRed" />

        <LinearLayout
            android:id="@+id/linearStatusDatas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >


            <LinearLayout
                android:id="@+id/linearAlcoholRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="4dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/alcohol_blood_rate"
                    android:src="@drawable/ic_blood_drop_plain" />

                <TextView
                    android:id="@+id/textViewAlcoholRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.6 g/L"
                    android:textColor="@color/driveAmber"
                    android:textSize="22sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearWaitToDrive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="4dp"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/time_to_wait"
                    android:src="@drawable/ic_update_white_24dp"
                    android:tint="@color/driveAmber" />

                <TextView
                    android:id="@+id/textViewTimeToDrive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12:34"
                    android:textColor="@color/driveAmber"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearWaitToSober"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="4dp"
                >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/time_to_wait"
                    android:src="@drawable/ic_update_white_24dp"
                    android:tint="@color/driveGreen" />

                <TextView
                    android:id="@+id/textViewTimeToSober"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12:34"
                    android:textColor="@color/driveGreen"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearPastDrinkTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/linearDriveStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorPrimary"
        >
        <TextView
            android:id="@+id/textViewPastDrinks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:drawableStart="@drawable/ic_history_white_24dp"
            android:drawableEnd="@drawable/ic_local_drink_white_24dp"
            android:text="@string/spacer"
            />

    </LinearLayout>


    <ListView
        android:id="@+id/listViewPastDrinks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/linearPastDrinkTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonAddDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_white_24dp"
        android:layout_margin="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonToDrinker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_person_white_24dp"
        android:layout_margin="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>